# ph2-apidocs

./: .gitignore  .pylintrc  LICENSE.html  README.md  index-browser-extension.html  index-rapidoc.html  index-redocly.html  index-swui.html  index.html
API/: .redocly.yaml  LICENSE.md  PH2-API-BrowserExtension.oas3.json  PH2-API-BrowserExtension.oas3.yml  PH2-API.oas3.json  PH2-API.oas3.yml  PHMothership.openapi.yml  openapi.json
API-WS/: pyproject.toml  validate-asyncapi.js
API-WS/api_ws/: API.py  __main__.py  adapter_blocklist_configuration.py  adapter_channel.py  adapter_configuration.py  adapter_diagnostics.py  adapter_messages.py  adapter_vpn_configuration.py  adapter_wifi_configuration.py  adapter_wps_configuration.py  api.py  aws_errors.py  backend_channel.py  changelog.py  common_channel.py  data_usage_messages.py  device_bedtime_configuration_messages.py  device_configuration_messages.py  device_discovery_messages.py  device_messages.py  markdown_sample.py  schemas.py  streaming_configuration.py  tags.py  templates.py  util.py  xref.py
API-WS/html/: index.html
API-WS/html2/: index.html
API-WS/json/: asyncapi.json
API-WS/tests/: test_api_ws.py
API/flows/: AdapterAccountAssociation-Flow.html  AsyncTransaction.html  ChangeEmail-Flow.html  (+6 more)
ProxyApi/: Streaming-Proxy-Admin-API.json  Streaming-Proxy-Integration-API.json  admin.html  index-admin.html  index-openapiexplorer.html  index-stoplight.html  index-swagger.html  index.html  readme.md  serve-local-test.sh
scripts/: bundle.sh  codegen.sh  gen-ws-api.sh  local-docs.sh  validate.sh
temp/: notes.txt
(+67 files in other folders)
